--- a/PopupMenu/examples/css/example1.css
+++ b/PopupMenu/examples/css/example1.css
@@ -9,7 +9,7 @@ body {
 	background: transparent url('../images/rss.png') no-repeat right;
 }
 
-#element1 {
+.blue {
 	float:left;
 	background:#3366cc;
 	color:white;
@@ -21,31 +21,18 @@ body {
 	-moz-box-shadow: 0px 0px 4px #666;
 	text-shadow: 0px 0px 1px #9CF;
 }
-#element2 {
-	float:left;
-	background:#3366cc;
-	color:white;
-	padding:10px;
-	font-weight:bold;
-	margin-left:1px;
-	-webkit-border-radius:5px 5px 0px 0px;
-	-moz-border-radius:5px 5px 0px 0px;
-	-webkit-box-shadow: 0px 0px 4px #666;
-	-moz-box-shadow: 0px 0px 4px #666;
-	text-shadow: 0px 0px 1px #9CF;
-}
-#element3 {
-	float:left;
-	background:#fff;
-	color:3366cc;
-	padding:10px;
-	font-weight:bold;
-	margin-left:1px;
-	-webkit-border-radius:5px 5px 0px 0px;
-	-moz-border-radius:5px 5px 0px 0px;
-	-webkit-box-shadow: 0px 0px 4px #666;
-	-moz-box-shadow: 0px 0px 4px #666;
-	text-shadow: 0px 0px 1px #9CF;
+
+.white {
+    float:left;
+    background:#fff;
+    color:3366cc;
+    padding:10px;
+    font-weight:bold;
+    -webkit-border-radius:5px 5px 0px 0px;
+    -moz-border-radius:5px 5px 0px 0px;
+    -webkit-box-shadow: 0px 0px 5px #666;
+    -moz-box-shadow: 0px 0px 4px #666;
+    text-shadow: 0px 0px 1px #9CF;
 }
 
 #myDivGentoo {
