--- a/Dialog/themes/window/main.css
+++ b/Dialog/themes/window/main.css
@@ -7,7 +7,7 @@
     filter: progid:DXImageTransform.Microsoft.gradient(GradientType=0, startColorstr=#d5e9ff, endColorstr=#a5d9ef);
     border:2px gray solid;
     position:absolute;
-    top:20%;
+    top:200px;
     -moz-border-radius: 5px 5px 0px 0px;
     -moz-box-shadow: #999 2px 3px 5px 1px;
     -webkit-border-radius: 5px 5px 0px 0px;
