--- a/Dialog/themes/plain/main.css
+++ b/Dialog/themes/plain/main.css
@@ -1,4 +1,4 @@
-.stp-dialog-window {
+.mj-dialog-window {
     width:250px;
     height:120px;
     background-color: #D5E9FF;
@@ -13,7 +13,7 @@
     -webkit-border-radius: 5px 5px 0px 0px;
     -webkit-box-shadow: #999 2px 3px 5px 1px;
 }
-.stp-dialog-windowHandler {
+.mj-dialog-windowHandler {
     width:100%;
     height:22px;
     font-family:arial;
@@ -22,34 +22,34 @@
     text-align: justify;
     padding:4px;
 }
-.stp-dialog-windowMessage {
+.mj-dialog-windowMessage {
     color: black;
     font-family: arial;
     font-size: 12px;
     padding: 13px;
 }
 
-.stp-dialog-windowMessage button {
+.mj-dialog-windowMessage button {
     font-family: arial;
     font-size: 13px;
 }
 
-.stp-dialog-windowHeaderText {
+.mj-dialog-windowHeaderText {
     padding-left: 3px;
     padding-top: 2px;
     white-space: nowrap;
     display: inline-block;
 }
 
-.stp-dialog-closeButton {
+.mj-dialog-closeButton {
     position: absolute;
     right: 4px;
     top: 4px;
     width: 11px;
     height: 11px;
-    background: transparent url('./stp-dialog-closeButton.png') 0 0 repeat-y;
+    background: transparent url('./mj-dialog-closeButton.png') 0 0 repeat-y;
     cursor: pointer;
 }
-.stp-dialog-closeButton:hover {
+.mj-dialog-closeButton:hover {
     background-position: 0px 11px;
 }
