--- a/Dialog/themes/chrome-dark/main.css
+++ b/Dialog/themes/chrome-dark/main.css
@@ -1,4 +1,4 @@
-.stp-dialog-window {
+.mj-dialog-window {
     width:250px;
     height:120px;
     background-color: #3c3b37;
@@ -10,7 +10,7 @@
     -webkit-border-radius: 3px 3px 3px 3px;
     -webkit-box-shadow: #999999 1px 1px 8px 0px;
 }
-.stp-dialog-windowHandler {
+.mj-dialog-windowHandler {
     height:24px;
     font-family:arial;
     color:white;
@@ -21,7 +21,7 @@
     border-left: 1px #3c3b37 solid;
     border-right: 1px #3c3b37 solid;
 }
-.stp-dialog-windowMessage {
+.mj-dialog-windowMessage {
     color: black;
     font-family: arial;
     font-size: 12px;
@@ -32,19 +32,19 @@
     border-radius: 4px 4px 0px 0px;
 }
 
-.stp-dialog-windowMessage button {
+.mj-dialog-windowMessage button {
     font-family: arial;
     font-size: 13px;
 }
 
-.stp-dialog-windowHeaderText {
+.mj-dialog-windowHeaderText {
     padding-left: 3px;
     padding-top: 4px;
     white-space: nowrap;
     display: inline-block;
 }
 
-.stp-dialog-closeButton {
+.mj-dialog-closeButton {
     position: absolute;
     right: 3px;
     top: 2px;
@@ -53,6 +53,6 @@
     background: transparent url('./close3.png') 0 0 repeat-y;
     cursor: pointer;
 }
-.stp-dialog-closeButton:hover {
+.mj-dialog-closeButton:hover {
     background-position: 0px 18px;
 }
